--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>Web development</h1>
-   <p>my name is hemandh!</p> 
+   <p>My name is hemandh!</p>
+   <p>Its works!</p> 
 </body>
 </html>
