--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,14 +7,14 @@
     <title>HTML Semantics</title>
 </head>
 <body>
-    <h1>Heamndh VEttukuzhiyil Binu</h1>
+    <h1>Hemandh Vettukuzhiyil Binu</h1>
     <article>
         <h2>About Me</h2>
             <p> My name is Hemandh, I am 21 years old and I like to sleep a lot, kinda lazy. I play a lot of video games, procrastinate a lot and I like football, Ronaldo fan here, I do drink coffee and tea but not an addict. I spent unhealthy amount of time watching anime and reading manga. My favourite anime is <abbr title="Attack On Titan"> AOT </abbr> and the manga I like the most is Berserk. </p>
             <p>
-                When I was in 6<sup>th</sup> grade I had this dream of becoming a software Engineer, and as I grew up, well...<em>reality isn't that easy</em>. Coding was not meant for me. Little by little my love for being an software engineer stopped. Yet, I wanted to learn about Computers. I did work on my personal computer here and there. I am hoping pursue a career in IT field. I do watch a lot of techy Videos and stuff. <blockquote>Efficiency is Clever Laziness -<cite>David Dunham</cite></blockquote> 
+                When I was in 6<sup>th</sup> grade I had tgineer, and as I grew up, well...<em>reality isn't that easy</em>. Coding was not meant for me. Little by little my love for being an software engineer stopped. Yet, I wanted to learn about Computers. I did work on my personal computer here and there. I am hoping pursue a career in IT field. I do watch a lot of techy Videos and stuff. <blockquote>Efficiency is Clever Laziness -<cite>David Dunham</cite></blockquote> 
             </p>
     </article> <br>
-    <footer>Copyright 2023 he Inc.<br>All rights reserved </footer>
+    <footer>Copyright 2023 hemandh Inc.<br>All rights reserved </footer>
 </body>
 </html>
