--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Semantics</title>
+    <title>HTML Assignment</title>
 </head>
 <body>
     <h1>Hemandh Vettukuzhiyil Binu</h1>
     <article>
         <h2>About Me</h2>
-            <p> My name is Hemandh, I am 21 years old and I like to sleep a lot, kinda lazy. I play a lot of video games, procrastinate a lot and I like football, Ronaldo fan here, I do drink coffee and tea but not an addict. I spent unhealthy amount of time watching anime and reading manga. My favourite anime is <abbr title="Attack On Titan"> AOT </abbr> and the manga I like the most is Berserk. </p>
+            <p> Hi I am Hemandh,I am 21 years old ,I like playing a lot of video games ,i can sit for atleast 10 hours inorder to finsih a game my most favorate game is <abbr title="god of war 4" > GOW4 </abbr> </p>
             <p>
-                When I was in 6<sup>th</sup> grade I had tgineer, and as I grew up, well...<em>reality isn't that easy</em>. Coding was not meant for me. Little by little my love for being an software engineer stopped. Yet, I wanted to learn about Computers. I did work on my personal computer here and there. I am hoping pursue a career in IT field. I do watch a lot of techy Videos and stuff. <blockquote>Efficiency is Clever Laziness -<cite>David Dunham</cite></blockquote> 
+                back in the old days when i was in my 8<sup>th</sup> grade I realized that in my future i should beaceme a game developer so i decided to learn more about animation,gaming,and coding.Gaming also helped me to solve probelms easly both in real life situation and also in exam . <blockquote>The future belongs to those who believe in the beauty of their dreams -<cite>Eleanor Roosevelt</cite></blockquote> 
             </p>
     </article> <br>
-    <footer>Copyright 2023 hemandh Inc.<br>All rights reserved </footer>
+    <footer>Copyright 2023 Vett Inc.<br>All rights reserved </footer>
 </body>
-</html>
+</html> 
