--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -15,6 +15,7 @@
                 back in the old days when i was in my 8<sup>th</sup> grade I realized that in my future i should beaceme a game developer so i decided to learn more about animation,gaming,and coding.Gaming also helped me to solve probelms easly both in real life situation and also in exam . <blockquote>The future belongs to those who believe in the beauty of their dreams -<cite>Eleanor Roosevelt</cite></blockquote> 
             </p>
             <img src="images/Hemandh.jpg">
+            <P>My hobbies are: driving, play video games, drawing etc.</P>
     </article> <br>
     <footer>Copyright 2023 Vett Inc.<br>All rights reserved </footer>
 </body>
