--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,7 +10,7 @@
     <header>Hemandh Vettukuzhiyil Binu</header>
     <article>
         <h2>About Me</h2>
-            <p> Hi I am Hemandh,I am 21 years old ,I like playing a lot of video games ,i can sit for atleast 10 hours inorder to finsih a game my most favorate game is <abbr title="god of war 4" > GOW4 </abbr> </p>
+            <p> Hi I am <em>Hemandh</em>,I am 21 years old ,I like playing a lot of video games ,i can sit for atleast 10 hours inorder to finsih a game my most favorate game is <abbr title="god of war 4" > GOW4 </abbr> </p>
             <p>
                 back in the old days when i was in my 8<sup>th</sup> grade I realized that in my future i should beaceme a game developer so i decided to learn more about animation,gaming,and coding.Gaming also helped me to solve probelms easly both in real life situation and also in exam . <blockquote>The future belongs to those who believe in the beauty of their dreams -<cite>Eleanor Roosevelt</cite></blockquote> 
             </p>
