--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,7 +7,9 @@
     <title>HTML Assignment</title>
 </head>
 <body>
-    <header>Hemandh Vettukuzhiyil Binu</header>
+    <header>
+        <h1>Hemandh Vettukuzhiyil Binu</h1>
+    </header>
     <article>
         <h2>About Me</h2>
             <p> Hi I am <em>Hemandh</em>,I am 21 years old ,I like playing a lot of video games ,i can sit for atleast 10 hours inorder to finsih a game my most favorate game is <abbr title="god of war 4" > GOW4 </abbr> </p>
