--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -18,6 +18,7 @@
             </p>
             <img src="images/Hemandh.jpg">
             <P>My hobbies are: driving, play video games, drawing etc.</P>
+            <a href="notes.html">SOME OF THE HTML TAGS AND THEIR DESCRIPTION</a>
     </article> <br>
     <footer>Copyright 2023 Vett Inc.<br>All rights reserved </footer>
 </body>
