--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <header>HTML TAGS</header>
-    
+    <header>
+        <h1>HTML TAGS</h1>
+    </header>
 </body>
 </html>
