--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -10,5 +10,9 @@
     <header>
         <h1>HTML TAGS</h1>
     </header>
+    <dl>
+        <dt><h></dt>
+            <dd>heading tag used to gives heading its displayes in bold and bigger fond</dd>
+    </dl>
 </body>
 </html>
