--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>TAGS</title>
 </head>
 <body>
     <header>
         <h1>HTML TAGS</h1>
     </header>
     <dl>
-        <dt> <h> </dt>
-            <dd>heading tag used to gives heading its displayes in bold and bigger fond</dd>
+        <dt>b</dt>
+            <dd>Used for bold text</dd>
+            <dt>strong</dt>
+            <dd>Used to highlight important text, it will make text bold </dd>
+            <dt>u</dt>
+            <dd>Used to underline the text</dd>
+            <dt>br</dt>
+            <dd>Used to break line</dd>
+            <dt>img</dt>
+            <dd>Defines image on webpage</dd>
     </dl>
 </body>
 </html>
