--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>TAGS</title>
+    <title>Simple HTML website</title>
 </head>
 <body>
     <header>
         <h1>HTML TAGS</h1>
     </header>
+    <article>
     <dl>
         <dt>b</dt>
-            <dd>Used for bold text</dd>
+            <dd>Used for bold text</dd><br>
             <dt>strong</dt>
-            <dd>Used to highlight important text, it will make text bold </dd>
-            <dt>u</dt>
-            <dd>Used to underline the text</dd>
+            <dd>Used to highlight important text, it will make text bold </dd><br>
+            <dt>a</dt>
+            <dd>defines hyperlink to connect to the another website</dd>
             <dt>br</dt>
             <dd>Used to break line</dd>
             <dt>img</dt>
             <dd>Defines image on webpage</dd>
     </dl>
+</article>
 </body>
 </html>
