--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -17,11 +17,11 @@
             <dt>strong</dt>
             <dd>Used to highlight important text, it will make text bold </dd><br>
             <dt>a</dt>
-            <dd>defines hyperlink to connect to the another website</dd>
+            <dd>defines hyperlink to connect to the another website</dd><br>
             <dt>br</dt>
-            <dd>Used to break line</dd>
+            <dd>Used to break line</dd><br>
             <dt>img</dt>
-            <dd>Defines image on webpage</dd>
+            <dd>Defines image on webpage</dd><br>
     </dl>
 </article>
 </body>
