--- a/midterm/index.html
+++ b/midterm/index.html
@@ -52,7 +52,10 @@
             <label for="email">Your Email</label><br>
             <input id="email" type="text" name="email" ><br>
             <label for="message">Your Message</label><br>
-            <input id="message" type="text" name="message" ><br>
+            <textarea id="message" name="message"></textarea><br>
+
+            <h3><strong>You like to visit the Starfish</strong></h3>
+
             <label for="No">Yes</label>
             <input type="radio" id="No" name="text">
             <label for="No">No</label>
@@ -62,10 +65,12 @@
             <button type="submit">SEND</button>
             
         </form>
-
         </div>
         </article>
     </main>
+    <footer id="foot">
+        &copy;Lone Starfish
+    </footer>
     </body>
     </html>
     
