--- a/midterm/index.html
+++ b/midterm/index.html
@@ -54,7 +54,7 @@
             <label for="message">Your Message</label><br>
             <textarea id="message" name="message"></textarea><br>
 
-            <h3><strong>You like to visit the Starfish</strong></h3>
+            <h3><strong>You like to visit the Starfish ?</strong></h3>
 
             <label for="No">Yes</label>
             <input type="radio" id="No" name="text">
