--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,23 +7,14 @@
     <title>HTML Assignment</title>
 </head>
 <body>
-    <header>
-        <h1>Hemandh Vettukuzhiyil Binu</h1>
-    </header>
-    <article>
-        <h2>About Me</h2>
-            <p> Hi I am <em>Hemandh</em>,I am 21 years old ,I like playing a lot of video games ,i can sit for atleast 10 hours inorder to finsih a game my most favorate game is <abbr title="god of war 4" > GOW4 </abbr> </p>
-            <p>
-                back in the old days when i was in my 8<sup>th</sup> grade I realized that in my future i should beaceme a game developer so i decided to learn more about animation,gaming,and coding.Gaming also helped me to solve probelms easly both in real life situation and also in exam . <blockquote>The future belongs to those who believe in the beauty of their dreams -<cite>Eleanor Roosevelt</cite></blockquote> 
-            </p>
-            <img src="images/Hemandh.jpg">
-            <ol><strong>Some of my hobbies are:</strong>
-                <li>Driving</li>
-                <li>playing Games</li>
-                <li> drawing</li>
-            </ol>
-            <a href="notes.html">SOME OF THE HTML TAGS AND THEIR DESCRIPTION</a>
-    </article> <br>
-    <footer>Copyright 2023 Vett Inc.<br>All rights reserved </footer>
+    <header> Hemandh Vettukuzhiyil Binu </header>
+  <article> 
+    <h1>About Me</h1>
+    <p> Hi, Myself <b>Hemandh</b>.Currently I am a student at <em>Algonquin college,</em> Enrolled in Interactive Media and Design. I chose this course because i am interested in coding and design, well i am Interested in playing competitive Games like Valorant and <abbr title="PlayerUnknown’s BattleGrounds"> PUBG </abbr> 
+    </p>
+    <p> Me and my friends tried to be in the top 500<sup>th</sup> postion so that it will appear in Gloabl Rank list. Since by playing Games we can develop a probem solving skills and like to be Game Developer in future.<blockquote>You only live once, but if you do it right, once is enough -<cite>Mae West</cite></blockquote></p>
+
+
+  </article>
 </body>
 </html> 
