--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,6 +14,10 @@
     </p>
     <p> Me and my friends tried to be in the top 500<sup>th</sup> postion so that it will appear in Gloabl Rank list. Since by playing Games we can develop a probem solving skills and like to be Game Developer in future.<blockquote>You only live once, but if you do it right, once is enough -<cite>Mae West</cite></blockquote></p>
 
+    <ol>
+        some of my hobbies are
+    </ol>
+
 
   </article>
 </body>
