--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -15,10 +15,14 @@
     <p> Me and my friends tried to be in the top 500<sup>th</sup> postion so that it will appear in Gloabl Rank list. Since by playing Games we can develop a probem solving skills and like to be Game Developer in future.<blockquote>You only live once, but if you do it right, once is enough -<cite>Mae West</cite></blockquote></p>
 
     <ol>
-        some of my hobbies are
-    </ol>
-
-
+        Some of my hobbies:
+        <li>Playing Games</li>
+        <li>Reading</li>
+        <li>Driving</li>
+    </ol>   
   </article>
+  <footer>
+    Copyright 2040 Vett Inc.<br>All rights reserved 
+  </footer>
 </body>
 </html> 
