--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -19,7 +19,8 @@
         <li>Playing Games</li>
         <li>Reading</li>
         <li>Driving</li>
-    </ol>   
+    </ol> 
+      <a href="tags.html"><B>SOME HTML TAGS</B></a>
   </article>
   <footer>
     Copyright 2040 Vett Inc.<br>All rights reserved 
