--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -21,7 +21,7 @@
         <li>Driving</li>
     </ol> 
       <a href="tags.html"><B>SOME HTML TAGS</B></a>
-  </article>
+  </article><br><br>
   <footer>
     Copyright 2040 Vett Inc.<br>All rights reserved 
   </footer>
