--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -20,6 +20,8 @@
         <li>Reading</li>
         <li>Driving</li>
     </ol> 
+
+    <a href="notes.html">HTML TAGS</a><br><br>
   <footer>
     Copyright 2040 Vett Inc.<br>All rights reserved 
   </footer>
