--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -13,7 +13,7 @@
     <p> Hi, Myself <b>Hemandh</b>.Currently I am a student at <em>Algonquin college,</em> Enrolled in Interactive Media and Design. I chose this course because i am interested in coding and design, well i am Interested in playing competitive Games like Valorant and <abbr title="PlayerUnknown’s BattleGrounds"> PUBG </abbr> 
     </p>
     <p> Me and my friends tried to be in the top 500<sup>th</sup> postion so that it will appear in Gloabl Rank list. Since by playing Games we can develop a probem solving skills and like to be Game Developer in future.<blockquote>You only live once, but if you do it right, once is enough -<cite>Mae West</cite></blockquote></p>
-
+        <img src="images/hemandh.jpeg">
     <ol>
         <strong>Some of my hobbies:</strong> 
         <li>Playing Games</li>
