--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <strong>TAGS AND DESCRIPTION</strong> 
+        <strong>HTML TAGS AND DESCRIPTION</strong> 
     </header><br><br>
         <article>
             <dt>p</dt>
