--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -9,17 +9,17 @@
     <header>
         <strong>HTML TAGS AND DESCRIPTION</strong> 
     </header><br><br>
-        <article>
+        <dl>
             <dt>p</dt>
-            <dd>IT DEFINES A PARAGRAPH </dd><br>
+            <dd>IT DEFINES A PARAGRAPH </dd>
             <dt>br</dt>
-            <dd>USED FOR SINGLE LINE BREAK</dd><br>
+            <dd>USED FOR SINGLE LINE BREAK</dd>
             <dt>em</dt>
-            <dd>DEFINS EMPHASIZED TEXT</dd><br>
+            <dd>DEFINS EMPHASIZED TEXT</dd>
             <dt>ul</dt>
-            <dd>DEFINS UNORDERED LIST</dd><br>
+            <dd>DEFINS UNORDERED LIST</dd>
             <dt>ol</dt>
-            <dd>DEFINS ORDERED LIST</dd><br>
-        </article>    
+            <dd>DEFINS ORDERED LIST</dd>
+        </dl>  
 </body>
 </html>
