--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -12,16 +12,18 @@
     <h1>About Me</h1>
     <p> Hi, Myself <b>Hemandh</b>.Currently I am a student at <em>Algonquin college,</em> Enrolled in Interactive Media and Design. I chose this course because i am interested in coding and design, well i am Interested in playing competitive Games like Valorant and <abbr title="PlayerUnknown’s BattleGrounds"> PUBG </abbr> 
     </p>
-    <p> Me and my friends tried to be in the top 500<sup>th</sup> postion so that it will appear in Gloabl Rank list. Since by playing Games we can develop a probem solving skills and like to be Game Developer in future.<blockquote>You only live once, but if you do it right, once is enough -<cite>Mae West</cite></blockquote></p>
-        <img src="images/hemandh.jpeg">
+    <p> Me and my friends tried to be in the top 500<sup>th</sup> postion so that it will appear in Gloabl Rank list. Since by playing Games we can develop a probem solving skills and like to be Game Developer in future.</p><blockquote>You only live once, but if you do it right, once is enough -<cite>Mae West</cite></blockquote>
+        <img src="images/hemandh.jpeg" alt="HEMANDH">
+        <b>Some of my hobbies:</b>
     <ol>
-        <strong>Some of my hobbies:</strong> 
         <li>Playing Games</li>
         <li>Reading</li>
         <li>Driving</li>
     </ol> 
 
     <a href="notes.html">HTML TAGS</a><br><br>
+
+  </article>
   <footer>
     Copyright 2040 Vett Inc.<br>All rights reserved 
   </footer>
