--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Assignment</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header> Hemandh Vettukuzhiyil Binu </header>
   <article> 
-    <h1>About Me</h1>
+    <h1 class="site-title"></h1> Me</h1>
     <p> Hi, Myself <b>Hemandh</b>.Currently I am a student at <em>Algonquin college,</em> Enrolled in Interactive Media and Design. I chose this course because i am interested in coding and design, well i am Interested in playing competitive Games like Valorant and <abbr title="PlayerUnknown’s BattleGrounds"> PUBG </abbr> 
     </p>
     <p> Me and my friends tried to be in the top 500<sup>th</sup> postion so that it will appear in Gloabl Rank list. Since by playing Games we can develop a probem solving skills and like to be Game Developer in future.</p><blockquote>You only live once, but if you do it right, once is enough -<cite>Mae West</cite></blockquote>
-        <img src="images/hemandh.jpeg" alt="HEMANDH">
+        <img id="my-image" src="images/hemandh.jpeg" alt="HEMANDH">
         <b>Some of my hobbies:</b>
-    <ol>
+    <ul>
         <li>Playing Games</li>
         <li>Reading</li>
         <li>Driving</li>
-    </ol> 
+    </ul> 
 
     <a href="notes.html">HTML TAGS</a><br><br>
 
