--- a/midterm/index.html
+++ b/midterm/index.html
@@ -66,7 +66,7 @@
                     <input type="radio" id="no" name="no" value="no">
                     <label for="no">no</label>
     
-                    <input type="radio" id="yes" name="maybe" value="maybe">
+                    <input type="radio" id="maybe" name="maybe" value="maybe">
                     <label for="maybe">Maybe</label><br>
     
                     <button class="button">SEND</button>
